changes of  fully responsive for all devices

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                     mollitia porro distinctio quas dicta omnis unde!</p>
                 <button>Order Now</button>
                 <div class="menu">
-                    <img src="Food-dim/dish1.png" id="dish1" alt="">
-                    <img src="Food-dim/dish2.png" id="dish2" alt="">
-                    <img src="Food-dim/dish3.png" id="dish3" alt="">
-                    <img src="Food-dim/dish4.png" id="dish4" alt="">
-                    <img src="Food-dim/dish5.png" id="dish5" alt="">
+                    <img src="Food-dim/dish1.png" id="dish1" alt="" class="bx">
+                    <img src="Food-dim/dish2.png" id="dish2" alt="" class="bx">
+                    <img src="Food-dim/dish3.png" id="dish3" alt="" class="bx">
+                    <img src="Food-dim/dish4.png" id="dish4" alt="" class="bx">
+                    <img src="Food-dim/dish5.png" id="dish5" alt="" class="bx">
                 </div>
             </div>
             <div class="dish-box">
